fix broken footer on mobile
turns out forcing the footer to stay at the bottom of the screen isn't a great idea for small screens

--- a/index.css
+++ b/index.css
@@ -41,8 +41,6 @@ h2 {
 }
 
 footer {
-    position: fixed;
-    bottom: 0;
     padding: 1rem;
 }
 
